src-ken&y/objects/Operation_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bin</label>
        <referenceTo>Bin__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consigned_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consigned Owner</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Operation Transactions (Container Item)</relationshipLabel>
        <relationshipName>Container_Item_Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Consumed__c</fullName>
        <label>Hours Consumed</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Plate_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Plate Number</label>
        <referenceTo>LPN__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation_Sequence__c</fullName>
        <label>Operation Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation Tracking</label>
        <referenceTo>Operation_Tracking__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Operation Transactions (Packaging UOM)</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Completed__c</fullName>
        <label>Quantity Completed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Packaging_UOM__c</fullName>
        <label>Quantity (Packaging UOM)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Scrapped__c</fullName>
        <label>Quantity Scrapped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Line</label>
        <referenceTo>Receipt_Line__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stocking_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stocking UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>StockingUOM_Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Operation Transactions</relationshipLabel>
        <relationshipName>Operation_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Operation Transaction</label>
    <nameField>
        <label>Operation Transaction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operation Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>